rename cheesesteak recipe title on page

--- a/recipes/cheesesteak.html
+++ b/recipes/cheesesteak.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Lasagna Recipe</h1>
+        <h1>Cheesesteak Recipe</h1>
         <a href="../index.html">Home</a><br>
 
         <img src="cheesesteak.jpg" alt="Take a look at this yummy lasagna!"><br>
